--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a href="https://www.starbucks.com/menu">Ganesh</a></li>
+                            <li><a href="https://www.starbucks.com/menu">Menu</a></li>
                             <li><a href="https://www.starbucks.com/rewards">rewards</a></li>
                             <li><a href="https://www.starbucks.com/gift">gift cards</a></li>
                         </ul>
