--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="main.css"> 
     <link rel="stylesheet" href="footer.css">
+    <link rel="icon" href="logo.png">
 </head>
 <body>
     <header>
